--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-transition-group": "^4.2.4",
+    "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
+    "gsap": "^3.2.6",
+    "interweave": "^12.5.0",
+    "node-sass": "^4.13.1",
+    "overmind": "^23.0.1",
+    "overmind-react": "^24.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-icons": "^3.9.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^4.3.0",
+    "react-use": "^14.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "prettier --write \"**/*.{ts,tsx,json,md}\" && yarn dev",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,5 +44,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^13.11.1",
+    "@types/reach__router": "^1.3.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-loader-spinner": "^3.1.0",
+    "prettier": "2.0.4",
+    "typescript": "^3.8.3"
   }
 }
